tests/spec/core_functions/color/rgba/error/five_args.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/rgba/error/five_args.hrx"

// Ignoring "test", error tests are not supported yet.
